--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,14 @@
 		<java.version>1.8</java.version>
   </properties>
   <dependencies>
+  		<!-- 基础包 -->
+		<dependency>
+			<groupId>WSPFramework</groupId>
+			<artifactId>WSPFramework</artifactId>
+			<version>1.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/WSPFramework.jar</systemPath>
+		</dependency>
   		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
