添加视频完成版

--- a/src/main/resources/paths.properties
+++ b/src/main/resources/paths.properties
@@ -1,3 +1,4 @@
 coverPath: /Users/liaocheng/Desktop/all/dndysrc/cover/
 postersPath: /Users/liaocheng/Desktop/all/dndysrc/posters/
-videoContentPath: /Users/liaocheng/Desktop/all/dndysrc/vidoeContent/
+videoContentPath: /Users/liaocheng/Desktop/all/dndysrc/videoContent/
+serverPath: http://www.dndy.com/dndystatic/
