推荐视频处理

--- a/src/main/resources/paths.properties
+++ b/src/main/resources/paths.properties
@@ -2,3 +2,4 @@ coverPath: /Users/liaocheng/Desktop/all/dndysrc/cover/
 postersPath: /Users/liaocheng/Desktop/all/dndysrc/posters/
 videoContentPath: /Users/liaocheng/Desktop/all/dndysrc/videoContent/
 serverPath: http://www.dndy.com/dndystatic/
+recommendSize: 20
